# ScanKassScheduleInstaller

./: .gitignore  Cargo.toml  Constants.Designer.cs  Constants.cs  Constants.resx  Extensions.cs  SchedulerInstaller.cs  SchedulerInstaller.csproj  SchedulerInstaller.sln  readme.md  rust-toolchain.toml
.github/workflows/: build.yml  gnu.yml  msvc.yml  publish.yml  release.yml
Demo/: Demo.csproj  Program.cs
SchedulerInstaller/: Constants.Designer.cs  Constants.resx  SchedulerInstaller.cs  SchedulerInstaller.csproj
src/: lib.rs
