[package]
name = "skatworker_installation"
edition = "2021"
version = "1.0.5"

[lib]
crate-type = ['cdylib']

[build-dependencies]
cargo = "=0.75.1"
home = "=0.5.9"
native-tls = "=0.2.13"
zerofrom = "=0.1.5"
litemap = "=0.7.4"

[dependencies]
rand = "0.9.0"
reqwest = { version = "0.12.12", features = ["blocking", "stream", "json"] }
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
serde_json = "1.0.138"
zip-extract = "0.2.1"
whoami = "1.4"
runas = "1.2.0"
winreg = "0.55.0"
